## Process this file with automake to produce Makefile.in.
EXTRA_DIST =
EXTRA_DIST += Makefile.am.in
EXTRA_DIST += acl.m4
EXTRA_DIST += afs.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += assert.m4
EXTRA_DIST += atexit.m4
EXTRA_DIST += backupfile.m4
EXTRA_DIST += bison.m4
EXTRA_DIST += boottime.m4
EXTRA_DIST += c-stack.m4
EXTRA_DIST += canon-host.m4
EXTRA_DIST += canonicalize.m4
EXTRA_DIST += check-decl.m4
EXTRA_DIST += chown.m4
EXTRA_DIST += clock_time.m4
EXTRA_DIST += closeout.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += d-ino.m4
EXTRA_DIST += d-type.m4
EXTRA_DIST += dirfd.m4
EXTRA_DIST += dirname.m4
EXTRA_DIST += dos.m4
EXTRA_DIST += dup2.m4
EXTRA_DIST += error.m4
EXTRA_DIST += euidaccess.m4
EXTRA_DIST += exclude.m4
EXTRA_DIST += exitfail.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += file-type.m4
EXTRA_DIST += fileblocks.m4
EXTRA_DIST += filemode.m4
EXTRA_DIST += fnmatch.m4
EXTRA_DIST += fpending.m4
EXTRA_DIST += free.m4
EXTRA_DIST += fstypename.m4
EXTRA_DIST += fsusage.m4
EXTRA_DIST += ftruncate.m4
EXTRA_DIST += getcwd-path-max.m4
EXTRA_DIST += getcwd.m4
EXTRA_DIST += getdate.m4
EXTRA_DIST += getgroups.m4
EXTRA_DIST += gethostname.m4
EXTRA_DIST += getline.m4
EXTRA_DIST += getndelim2.m4
EXTRA_DIST += getopt.m4
EXTRA_DIST += getpagesize.m4
EXTRA_DIST += getpass.m4
EXTRA_DIST += gettext.m4
EXTRA_DIST += gettextext.m4
EXTRA_DIST += gettimeofday.m4
EXTRA_DIST += getugroups.m4
EXTRA_DIST += getusershell.m4
EXTRA_DIST += glibc.m4
EXTRA_DIST += glibc21.m4
EXTRA_DIST += group-member.m4
EXTRA_DIST += hard-locale.m4
EXTRA_DIST += hash.m4
EXTRA_DIST += host-os.m4
EXTRA_DIST += human.m4
EXTRA_DIST += iconv.m4
EXTRA_DIST += idcache.m4
EXTRA_DIST += intdiv0.m4
EXTRA_DIST += intmax.m4
EXTRA_DIST += intmax_t.m4
EXTRA_DIST += inttypes-pri.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += inttypes_h.m4
EXTRA_DIST += isc-posix.m4
EXTRA_DIST += jm-macros.m4
EXTRA_DIST += jm-mktime.m4
EXTRA_DIST += jm-winsz1.m4
EXTRA_DIST += jm-winsz2.m4
EXTRA_DIST += lchown.m4
EXTRA_DIST += lcmessage.m4
EXTRA_DIST += lib-check.m4
EXTRA_DIST += lib-ld.m4
EXTRA_DIST += lib-link.m4
EXTRA_DIST += lib-prefix.m4
EXTRA_DIST += link-follow.m4
EXTRA_DIST += long-options.m4
EXTRA_DIST += longdouble.m4
EXTRA_DIST += longlong.m4
EXTRA_DIST += ls-mntd-fs.m4
EXTRA_DIST += lstat.m4
EXTRA_DIST += makepath.m4
EXTRA_DIST += malloc.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbswidth.m4
EXTRA_DIST += md5.m4
EXTRA_DIST += memchr.m4
EXTRA_DIST += memcmp.m4
EXTRA_DIST += memcoll.m4
EXTRA_DIST += memcpy.m4
EXTRA_DIST += memmove.m4
EXTRA_DIST += memrchr.m4
EXTRA_DIST += memset.m4
EXTRA_DIST += mkdir-slash.m4
EXTRA_DIST += mkstemp.m4
EXTRA_DIST += mktime.m4
EXTRA_DIST += modechange.m4
EXTRA_DIST += mountlist.m4
EXTRA_DIST += nanosleep.m4
EXTRA_DIST += nls.m4
EXTRA_DIST += obstack.m4
EXTRA_DIST += onceonly.m4
EXTRA_DIST += path-concat.m4
EXTRA_DIST += pathmax.m4
EXTRA_DIST += perl.m4
EXTRA_DIST += physmem.m4
EXTRA_DIST += po.m4
EXTRA_DIST += posixtm.m4
EXTRA_DIST += posixver.m4
EXTRA_DIST += prereq.m4
EXTRA_DIST += printf-posix.m4
EXTRA_DIST += progtest.m4
EXTRA_DIST += putenv.m4
EXTRA_DIST += quote.m4
EXTRA_DIST += quotearg.m4
EXTRA_DIST += readdir.m4
EXTRA_DIST += readlink.m4
EXTRA_DIST += readtokens.m4
EXTRA_DIST += readutmp.m4
EXTRA_DIST += realloc.m4
EXTRA_DIST += regex.m4
EXTRA_DIST += rename.m4
EXTRA_DIST += restrict.m4
EXTRA_DIST += rmdir-errno.m4
EXTRA_DIST += rmdir.m4
EXTRA_DIST += rpmatch.m4
EXTRA_DIST += safe-read.m4
EXTRA_DIST += safe-write.m4
EXTRA_DIST += same.m4
EXTRA_DIST += save-cwd.m4
EXTRA_DIST += savedir.m4
EXTRA_DIST += settime.m4
EXTRA_DIST += sha.m4
EXTRA_DIST += sig2str.m4
EXTRA_DIST += signed.m4
EXTRA_DIST += size_max.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += st_dm_mode.m4
EXTRA_DIST += st_mtim.m4
EXTRA_DIST += stat.m4
EXTRA_DIST += stdbool.m4
EXTRA_DIST += stdint_h.m4
EXTRA_DIST += stdio-safer.m4
EXTRA_DIST += stpcpy.m4
EXTRA_DIST += strcase.m4
EXTRA_DIST += strcspn.m4
EXTRA_DIST += strdup.m4
EXTRA_DIST += strftime.m4
EXTRA_DIST += strndup.m4
EXTRA_DIST += strnlen.m4
EXTRA_DIST += strpbrk.m4
EXTRA_DIST += strstr.m4
EXTRA_DIST += strtod.m4
EXTRA_DIST += strtoimax.m4
EXTRA_DIST += strtol.m4
EXTRA_DIST += strtoll.m4
EXTRA_DIST += strtoul.m4
EXTRA_DIST += strtoull.m4
EXTRA_DIST += strtoumax.m4
EXTRA_DIST += strverscmp.m4
EXTRA_DIST += timespec.m4
EXTRA_DIST += tm_gmtoff.m4
EXTRA_DIST += tzset.m4
EXTRA_DIST += uintmax_t.m4
EXTRA_DIST += ulonglong.m4
EXTRA_DIST += unicodeio.m4
EXTRA_DIST += unistd-safer.m4
EXTRA_DIST += unlink-busy.m4
EXTRA_DIST += unlocked-io.m4
EXTRA_DIST += uptime.m4
EXTRA_DIST += userspec.m4
EXTRA_DIST += utimbuf.m4
EXTRA_DIST += utime.m4
EXTRA_DIST += utimens.m4
EXTRA_DIST += utimes-null.m4
EXTRA_DIST += utimes.m4
EXTRA_DIST += vasnprintf.m4
EXTRA_DIST += vasprintf.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += xalloc.m4
EXTRA_DIST += xgetcwd.m4
EXTRA_DIST += xreadlink.m4
EXTRA_DIST += xsize.m4
EXTRA_DIST += xstrtod.m4
EXTRA_DIST += xstrtoimax.m4
EXTRA_DIST += xstrtol.m4
EXTRA_DIST += xstrtoumax.m4
EXTRA_DIST += yesno.m4

Makefile.am: Makefile.am.in
	rm -f $@ $@t
	(echo "## Process this file with automake to produce Makefile.in."; \
	 echo EXTRA_DIST =;				\
	 echo "EXTRA_DIST += Makefile.am.in";		\
	 ls -1 *.m4 | sed 's/^/EXTRA_DIST += /'; echo )	\
	  >> $@t
	sed -n '/^Makefile\.am:/,$$p' $@.in >> $@t
	chmod a-w $@t
	mv $@t $@
